# crickcli

./: .gitignore  Cargo.toml  README.md
crickcli/: Cargo.toml
src/: cricket.rs  main.rs
